# Lime_Robot

./: README.md  coordinates.txt
src/cartographer_config/: CMakeLists.txt  package.xml
src/cartographer_config/config/: robot_2d.lua
src/cartographer_config/launch/: cartographer.launch.py  cartographer_localization.launch.py
src/data_transmission/: CMakeLists.txt  package.xml
src/data_transmission/src/: data_transmission.cpp  fusion.cpp
src/lime_bringup/: CMakeLists.txt  package.xml
src/lime_bringup/launch/: Lime_Robot_mapping.launch.py  Lime_Robot_navigation.launch.py
src/model_display/: CMakeLists.txt  package.xml
src/model_display/resource/: mini_omni_robot.urdf
src/model_display/src/: model_display.cpp
src/navigation2_config/: CMakeLists.txt  package.xml
src/navigation2_config/launch/: robot_nav2.launch.py
src/navigation2_config/maps/: dormitory_map.pgm  dormitory_map.yaml  map.pgm  map.yaml  map2.pgm  map2.yaml
src/navigation2_config/param/: BT.XML  nav2_param.yaml  nav2_param2.yaml  navigation2.yaml
src/navigation2_config/src/: autolocalization.cpp  cmd_nav.cpp
src/plot_helper/: package.xml  setup.cfg  setup.py
src/plot_helper/plot_helper/: pid_plot_node.py
src/slam/: CMakeLists.txt  package.xml
src/slam/map/: map.pcd
src/slam/src/: slam_node.cpp
src/wheeltec_mic_msg/: CMakeLists.txt  package.xml
src/wheeltec_mic_msg/msg/: ItemInfo.msg  Voice.msg
src/wheeltec_mic_msg/srv/: Asr.srv
